fix: PC-163(images and join and save 10% button link updated)
1. Images should align with bottom of orange box, at the moment they are misaligned
2. Registration link updated on same tab instead of another tab

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -128,6 +128,7 @@
   width: 100%;
   height: 100%;
 }
+
 .bg-dark-icon-offer {
   background-image: url('../assets/svg/slider-bg-collective.svg');
   width: 100%;
@@ -345,8 +346,8 @@
     margin-top: 0;
   }
    .bg-image-height {
-    height: calc(40vh - 3.75rem);
-    min-height: calc(40vh - 3.75rem);
+    height: calc(60vh - 3.75rem);
+    min-height: calc(60vh - 3.75rem);
   } 
   .annotation-image-height {
     height: calc(40vh - 3.75rem);
